--- a/app/src/main/res/layout/item_charpter.xml
+++ b/app/src/main/res/layout/item_charpter.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
+    android:minHeight="42dp"
     android:gravity="center_vertical"
     android:padding="4dp">
 
@@ -9,5 +10,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView_Title"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 </LinearLayout>
