--- a/app/src/main/res/layout/view_set.xml
+++ b/app/src/main/res/layout/view_set.xml
@@ -36,7 +36,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp">
+                android:paddingRight="8dp"
+                android:id="@+id/action_set_list">
 
                 <ImageView
                     android:layout_width="wrap_content"
