--- a/app/src/main/res/layout/readview.xml
+++ b/app/src/main/res/layout/readview.xml
@@ -24,7 +24,9 @@
         android:background="@null"
         android:id="@+id/white_space"
         android:orientation="vertical"
-        android:visibility="gone" />
+        android:visibility="gone" >
+
+    </LinearLayout>
 
     <include
         android:layout_width="match_parent"
